--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Encuentra tu rumbo para salir de la crisis financiera lo más pronto posible.">
-    <link rel="stylesheet" href="/assets/styles/normalize.css">
+    <link rel="stylesheet" href="./assets/styles/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/styles/icons.css">
-    <link rel="stylesheet" href="/assets/styles/base.css">
-    <link rel="stylesheet" href="/assets/styles/index.css">
+    <link rel="stylesheet" href="./assets/styles/icons.css">
+    <link rel="stylesheet" href="./assets/styles/base.css">
+    <link rel="stylesheet" href="./assets/styles/index.css">
     <title>Ordenando El Bolsillo - 12 Pasos para Salir de tu Crisis Financiera</title>
 </head>
 <body>
@@ -29,11 +29,11 @@
         <div class="product__main">
             <div class="container">
                 <div class="banner">
-                    <img src="/assets/images/TitlePL.png" alt="12 Pasos para salir de tu Crisis Financiera">
+                    <img src="./assets/images/TitlePL.png" alt="12 Pasos para salir de tu Crisis Financiera">
                 </div>
                 <video class="video"
-                    src="/assets/videos/12-pasos-para-salir-de-tu-crisis-financiera.mp4"
-                    poster="/assets/images/CoverVideo.jpg"
+                    src="./assets/videos/12-pasos-para-salir-de-tu-crisis-financiera.mp4"
+                    poster="./assets/images/CoverVideo.jpg"
                     controls
                 ></video>
             </div>
@@ -46,7 +46,7 @@
                         ellas lo más pronto posible.</p>
                 </section>
                 <div class="product__image">
-                    <img src="/assets/images/MasterSello.jpg" alt="Sello de garantía del MasterClass">
+                    <img src="./assets/images/MasterSello.jpg" alt="Sello de garantía del MasterClass">
                 </div>
             </div>
         </div>
@@ -189,7 +189,7 @@
                     <h2 class="subtitle">Incluye</h2>
                 </section>
                 <div class="product__image">
-                    <img src="/assets/images/CoverGris.jpg" alt="Cover del producto">
+                    <img src="./assets/images/CoverGris.jpg" alt="Cover del producto">
                 </div>
                 <div class="product__properties">
                     <div>
@@ -221,7 +221,7 @@
             <section>
                 <h2 class="subtitle">¿Quién será tu entrenador?</h2>
                 <div class="product__image">
-                    <img src="/assets/images/MasterSello.jpg" alt="Sello de garantía del MasterClass">
+                    <img src="./assets/images/MasterSello.jpg" alt="Sello de garantía del MasterClass">
                 </div>
             </section>
             <div>
@@ -250,7 +250,7 @@
                 <a href="#" class="cta__button button">Obtener asesoría</a>
             </section>
             <div class="certificate">
-                <img src="/assets/images/Certificado.jpg" alt="Certificado de terminación del curso">
+                <img src="./assets/images/Certificado.jpg" alt="Certificado de terminación del curso">
             </div>
         </div>
     </article>
@@ -258,7 +258,7 @@
     <article class="warranty">
         <div class="container">
             <div class="warranty__seal">
-                <img src="/assets/images/Garantia.png" alt="Garantía de devolución de dinero.">
+                <img src="./assets/images/Garantia.png" alt="Garantía de devolución de dinero.">
             </div>
             <section>
                 <h2 class="title"><span>7 dias</span> de garantía</h2>
@@ -270,7 +270,7 @@
         </div>
     </article>
 
-    <script src="/assets/scripts/index.js" type="text/javascript"></script>
+    <script src="./assets/scripts/index.js" type="text/javascript"></script>
 
 </body>
 </html>
