Se termina el diseño responsive, con las versiones para movil, tablet y desktop.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="description" content="Encuentra tu rumbo para salir de la crisis financiera lo más pronto posible.">
     <link rel="stylesheet" href="./assets/styles/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,6 +12,14 @@
     <link rel="stylesheet" href="./assets/styles/base.css">
     <link rel="stylesheet" href="./assets/styles/index.css">
     <title>Ordenando El Bolsillo - 12 Pasos para Salir de tu Crisis Financiera</title>
+
+    <!--
+
+        todo -> Revisar los microdatos a agregar a la web
+        todo -> Configurar OpenGrahp y TwitterCard para configurar el sitio
+
+    -->
+
 </head>
 <body>
 
@@ -224,7 +232,7 @@
                     <img src="./assets/images/MasterSello.jpg" alt="Sello de garantía del MasterClass">
                 </div>
             </section>
-            <div>
+            <div class="trainer__info">
                 <p>Tu entrenado es DIEGO FERNANDO AREVALO RIAÑO, Administrador de Empresas, egresado de la Universidad Externado de Colombia. Dentro de sus
                 trabajos se destacan la publicación de tres libros:</p>
                 <ul>
